--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,15 @@
-.App {
-  #text-align: center;
+body {
+  text-align: left;
 }
 
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.nav {
+  color: #333;
+  float: none;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+@media only screen and (max-width: 400px) {
+  .nav {
+    float: right;
+    color: #f00;
+  }
 }
