--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,8 @@
   background-color: #f1f1f1;
   padding: 10px 0;
   text-align: center;
-  position: fixed;
+  /* Use normal flow; parent flex will keep it at bottom */
+  position: static;
   width: 100%;
-  bottom: 0;
+  margin-top: auto;
 }
